--- a/challenge.html
+++ b/challenge.html
@@ -4,5 +4,75 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <header>
+    <div class="logo">
+      <img
+        src="./img/logo.png"
+        srcset="./img/logo.png 57w, ./img/logo@2x.png 114w"
+        class="logo-img"
+      />
+      <span class="company-name">boxed coffee</span>
+    </div>
+    <nav>
+      <ul>
+        <li><a>Products</a></li>
+        <li><a>About</a></li>
+        <li><a>Contact</a></li>
+        <li class="special"><a>Free Trial</a></li>
+      </ul>
+    </nav>
+    <div class="mobile-nav">
+      <div class="nav-icon"></div>
+    </div>
+  </header>
+  <body>
+    <div class="banner">
+      <div class="container">
+        <div class="row">
+          <div class="column-item">
+            <h1 class="title text-margin-bottom">
+              Coffee delivered straight to your door
+            </h1>
+            <p class="text-margin-bottom">
+              Get boxed organic coffee delivered to your home. <br />
+              Drink in minutes.
+            </p>
+            <button>Try Boxed Coffee for 7 days</button>
+          </div>
+          <img src="img/coffee.png" class="column-item coffee" />
+        </div>
+      </div>
+    </div>
+    <section class="motto container">
+      <div class="motto-row">
+        <div class="motto-item column-item">
+          <img src="img/icon-delivery.png" />
+          <h2>Delivered Fast</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi
+            odit iusto quia.
+          </p>
+        </div>
+        <div class="motto-item column-item">
+          <img src="img/icon-coffee.png" />
+          <h2>Delivered Hot</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi
+            odit iusto quia.
+          </p>
+        </div>
+        <div class="motto-item column-item">
+          <img src="img/icon-time.png" />
+          <h2>Delivered Now</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi
+            odit iusto quia.
+          </p>
+        </div>
+      </div>
+      <div class="button-box">
+        <button class="hollow">Buy fast, hot coffee now</button>
+      </div>
+    </section>
+  </body>
 </html>
